--- a/index.html
+++ b/index.html
@@ -9,47 +9,47 @@
   </head>
   <body>
     <nav id="nav">
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>I Can</span>
         <img src="./img/1.jpg" />
       </a>
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>Show</span>
         <img src="./img/2.jpg" />
       </a>
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>How</span>
         <img src="./img/3.jpg" />
       </a>
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>To Make</span>
         <img src="./img/4.jpg" />
       </a>
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>This</span>
         <img src="./img/5.jpg" />
       </a>
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>CINDER BLOC</span>
         <img src="./img/6.jpg" />
       </a>
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>Hover</span>
         <img src="./img/7.jpg" />
       </a>
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>HTML</span>
         <img src="./img/8.jpg" />
       </a>
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>Css</span>
         <img src="./img/9.jpg" />
       </a>
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>And</span>
         <img src="./img/10.jpg" />
       </a>
-      <a href="http://" target="_blank">
+      <a href="#" target="_blank">
         <span>javascript</span>
         <img src="./img/11.jpg" />
       </a>
